# ccc-rs

./: Cargo.toml
claude-copy-code/: .gitignore  package.json
crates/ccc-agent/: Cargo.toml
crates/ccc-agent/src/: lib.rs  loop_engine.rs  mcp_registry.rs  runner.rs  session.rs  session_store.rs
crates/ccc-api/: Cargo.toml
crates/ccc-api/src/: client.rs  error.rs  lib.rs  provider.rs  retry.rs  stream.rs  types.rs
crates/ccc-auth/: Cargo.toml
crates/ccc-auth/src/: api_key.rs  auth_code_listener.rs  config.rs  crypto.rs  lib.rs  oauth.rs  storage.rs  types.rs
crates/ccc-cli/: Cargo.toml
crates/ccc-cli/src/: cli.rs  error.rs  lib.rs  main.rs  managed.rs  output.rs  plugins.rs  runtime.rs  stdin.rs
crates/ccc-cli/src/commands/: chat.rs  config.rs  login.rs  mod.rs
crates/ccc-core/: Cargo.toml
crates/ccc-core/src/: config.rs  error.rs  ids.rs  lib.rs  paths.rs  permissions.rs  tasks.rs  types.rs
crates/ccc-mcp/: Cargo.toml
crates/ccc-mcp/src/: client.rs  connector.rs  lib.rs  types.rs
crates/ccc-platform/: Cargo.toml
crates/ccc-platform/src/: detect.rs  lib.rs  vcs.rs
crates/ccc-telemetry/: Cargo.toml
crates/ccc-telemetry/src/: lib.rs
crates/ccc-tools/: Cargo.toml
crates/ccc-tools/src/: agent.rs  ask_user_question.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  task_create.rs  task_get.rs  task_list.rs  task_update.rs  tool.rs  types.rs
crates/ccc-tui/: Cargo.toml
crates/ccc-tui/src/: app.rs  events.rs  lib.rs  main.rs  terminal.rs  ui.rs
crates/ccc-vim/: Cargo.toml
crates/ccc-vim/src/: lib.rs  motions.rs  transitions.rs  types.rs
docs/plans/: 2026-04-01-phase1-foundation.md  2026-04-01-phase10-cli.md  2026-04-01-phase11-core-refinement.md  2026-04-01-phase12-integration.md  2026-04-01-phase2-auth.md  2026-04-01-phase3-api.md  2026-04-01-phase4-mcp.md  2026-04-01-phase5-tools.md  2026-04-01-phase6-agent.md  2026-04-01-phase7-tui.md  2026-04-01-phase8-vim-advanced.md  2026-04-01-phase9-telemetry.md  ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-01-phase14-session-mcp.md  2026-04-02-phase16-runtime-expansion.md
docs/superpowers/specs/: 2026-04-01-phase13-cli-telemetry-design.md  2026-04-01-phase14-session-mcp-design.md  2026-04-02-phase16-overview-design.md  2026-04-02-phase16a-policy-plugin-mcp-bootstrap-design.md  2026-04-02-phase16b-remote-mcp-transport-design.md  2026-04-02-phase16c-enterprise-managed-mcp-design.md
