[package]
name = "ccc-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ccc-core = { path = "../ccc-core" }
ccc-api = { path = "../ccc-api" }
ccc-tools = { path = "../ccc-tools" }
ccc-mcp = { path = "../ccc-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
futures = "0.3"
