[package]
name = "ccc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ccc-core = { path = "../ccc-core" }
ccc-auth = { path = "../ccc-auth" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { version = "1", features = ["full"] }
