[package]
name = "ccc-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
ccc-core = { path = "../ccc-core" }
ccc-platform = { path = "../ccc-platform" }

thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
keyring.workspace = true

# HTTP for token exchange / refresh
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# PKCE + state
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Local HTTP server for auth-code redirect capture
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "query"] }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["full"] }
