[package]
name = "ccc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = "0.12"
sha2 = "0.10"
ccc-auth = { path = "../ccc-auth" }
ccc-api = { path = "../ccc-api" }
ccc-agent = { path = "../ccc-agent" }
ccc-core = { path = "../ccc-core" }
ccc-telemetry = { path = "../ccc-telemetry" }
ccc-tui = { path = "../ccc-tui" }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
