[package]
name = "ccc-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
ccc-core = { path = "../ccc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
walkdir = "2"
globset = "0.4"
termcolor = "1"
grep-printer = "0.2"
grep-regex = "0.1"
grep-searcher = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
